@@ -9,6 +9,7 @@
 	flash9 : list native getter/setters in Type API class/instance fields
 	all : make haxe.rtti.Generic typing lazy (fix for self-recursion)
 	all : allow haxe.rtti.Generic + inheritance
+	all : added resource size limit to 12MB (ocaml max_string_size is 16MB + b64)
 
 2010-01-09: 2.05
 	js : added js.Scroll
